[package]
name = "drv-errors"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
drv-errors-derive.workspace = true
solana-program = {version = "=2.2.1", optional = true}
solana-sdk = {version = "=2.2.1", optional = true}
serde_json.workspace = true
serde = { version = "^1.0.145", features = ["derive"] }
drv-models.workspace = true

[lints]
workspace = true

[features]
default = ["on-chain"]
on-chain = ["solana-program"]
off-chain = ["solana-sdk"]
