[package]
name = "drv-errors"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
drv-errors-derive.workspace = true
drv-models.workspace = true
serde = { version = "^1.0.145", features = ["derive"] }
serde_json.workspace = true
solana-msg = "3.0.0"
solana-program-error = { version = "3.0.0", features = ["serde"] }
solana-pubkey = { version = "3.0.0", features = ["bytemuck", "serde"] }

[lints]
workspace = true
