[package]
name = "models"
version.workspace = true
edition.workspace = true

[dependencies]
drv-macros.workspace = true
bytemuck = { version = "^1.23.0", features = ["derive"] }
solana-program = {version = "=2.2.1", optional = true}
solana-sdk = {version = "=2.2.1", optional = true}
serde_json.workspace = true
serde = { version = "^1.0.145", features = ["derive"] }

[lints]
workspace = true

[features]
default = ["on-chain"]
on-chain = ["solana-program"]
off-chain = ["solana-sdk"]
