[package]
name = "drv-models"
version.workspace = true
edition.workspace = true

[dependencies]
drv-macros.workspace = true
bytemuck = { version = "^1.23.0", features = ["derive"] }
solana-program = { version = "^2.2.1", optional = true }
solana-sdk = { version = "^2.3.0", optional = true }
serde_json.workspace = true
serde = { version = "^1.0.145", features = ["derive"] }

[lints]
workspace = true

[features]
test-sbf = []
competition = []
default = ["on-chain"]
on-chain = ["solana-program"]
off-chain = ["solana-sdk"]
