[package]
name = "drv-models"
version.workspace = true
edition.workspace = true

[dependencies]
drv-macros.workspace = true
bytemuck = { version = "^1.23.0", features = ["derive"] }
solana-program = { version = "3.0.0", optional = true }
solana-sdk = { version = "3.0.0", optional = true }
serde_json.workspace = true
serde = { version = "^1.0.145", features = ["derive"] }

[lints]
workspace = true

[features]
test-sbf = []
competition = []
default = ["off-chain"]
on-chain = ["solana-program"]
off-chain = ["solana-sdk"]
